samples/_failures_safe/1761537519_5c173c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66e06700.c: In function ‘main’:
./samples/SAFE/__tmp_66e06700.c:164:13: error: expected ‘;’ at end of input
  164 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_66e06700.c:164:5: error: expected declaration or statement at end of input
  164 |     return 0
      |     ^~~~~~
